hot fix Register API